--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,11 +1,11 @@
 .input-field-container {
+  line-height: 1.7;
   @each $color in $colorType {
     .input-field.#{$color} {
       display: flex;
       align-items: center;
       position: relative;
       border-color: colorMapper(grayclr, 200);
-
       legend {
         position: absolute;
         background: transparent;
@@ -21,6 +21,7 @@
       }
 
       input {
+        line-height: 1.7;
         width: 100%;
         height: 100%;
         border: none;
@@ -45,10 +46,9 @@
 
       &.sm {
         font-size: 13px;
-
+        height: 32.09px;
         input {
-          padding: 8.5px 14px;
-          font-size: 1em;
+          padding: 4px 10px;
         }
 
         img {
@@ -63,9 +63,10 @@
 
       &.md {
         font-size: 14px;
+        height: 37.8px;
 
         input {
-          padding: 12.5px 14px;
+          padding: 6px 16px;
           font-size: 1em;
         }
 
@@ -81,9 +82,10 @@
 
       &.lg {
         font-size: 15px;
+        height: 43.5px;
 
         input {
-          padding: 16.5px 14px;
+          padding: 8px 22px;
           font-size: 1em;
         }
 
