--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -1,375 +1,73 @@
-.select-container {
-  display: inline-block;
-  width: 500px;
-
-  .selected-options {
-    width: 100%;
-    height: auto;
-    min-height: 40px;
-    padding: 0px 12px;
-    border: 1px solid #0372d8;
-    display: inline-flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 10px 8px;
-    border-radius: 8px;
-    overflow: visible;
+@each $color in $colorType {
+  .select-container.#{$color} {
     position: relative;
+    line-height: 1.7;
 
-    .selected-options-list {
-      width: 100%;
-      position: relative;
-      display: flex;
-      align-items: center;
+    .selected-options {
+      border: 1px solid colorMapper($color, main);
+      &.sm {
+        padding: 4px 10px;
+        height: 32.09px;
+        font-size: 13px;
+      }
 
-      .options-count {
-        position: relative;
-        left: 12px;
-        padding: 0px 23px 0px 12px;
-        height: auto;
-        width: auto;
-        background-color: #0084ff;
-        border-radius: 100px;
+      &.md {
+        height: 37.8px;
+        padding: 6px 16px;
         font-size: 14px;
-        @include flex(flex-start, center, row);
+      }
+
+      &.lg {
+        height: 43.5px;
+        padding: 8px 22px;
+        font-size: 15px;
+      }
+
+      .selected-options-list {
+        .placeholder-text {
+          color: colorMapper(grayclr, 500);
+        }
+      }
+
+      .toggle-arrow-icon {
+        transition: all 0.3s ease-in-out;
+        width: 1em;
+        height: 1em;
+        margin-top: 0.5em;
+        appearance: none;
+        border-left: 7px solid transparent;
+        border-right: 7px solid transparent;
+        border-top: 7px solid colorMapper($color, main);
+        position: absolute;
+        right: 8px;
         cursor: pointer;
-        white-space: nowrap;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.15px;
-        color: white;
+        z-index: 200;
       }
-    }
 
-    .selected-placeholder {
-      position: absolute;
-      background: transparent;
-      font-weight: 400;
-      font-size: 12px;
-      line-height: 12px;
-      letter-spacing: 0.15px;
-      z-index: 2;
-      padding: 0px 4px;
-      color: #0009;
-      transition: all 0.1s ease-in-out;
-
-      &.change-position-animation {
-        transition: all 0.1s ease-in-out;
-        transform: translateY(-19px) translateX(5px);
-        background: white;
+      .toggle-arrow-icon:checked {
+        transition: all 0.3s ease-in-out;
+        z-index: 200;
       }
-    }
 
-    .toggle-arrow-icon {
-      transition: all 0.3s ease-in-out;
-      width: 10px;
-      height: 10px;
-      appearance: none;
-      border-left: 7px solid transparent;
-      border-right: 7px solid transparent;
-      border-top: 7px solid #0372d8;
-      position: absolute;
-      top: 52%;
-      right: 20px;
-      transform: translate(0%, -50%);
-      cursor: pointer;
-      z-index: 200;
-    }
-
-    .toggle-arrow-icon:checked {
-      transition: all 0.3s ease-in-out;
-      z-index: 200;
-    }
-
-    .selected {
-      padding: 0px 23px 0px 12px;
-      height: auto;
-      width: auto;
-      background-color: #0084ff0d;
-      border-radius: 100px;
-      font-size: 14px;
-      @include flex(flex-start, center, row);
-      cursor: pointer;
-      position: relative;
-      white-space: nowrap;
-      font-weight: 400;
-      line-height: 24px;
-      letter-spacing: 0.15px;
-      color: #0084ff;
-
-      &.excessive-width {
+      .excessive-width {
         display: none;
       }
-
-      &::after {
-        content: '';
-        position: absolute;
-        top: 7px;
-        right: 9px;
-        width: 2px;
-        height: 10px;
-        background: #0084ff;
-        transform: rotate(45deg);
-      }
-
-      &::before {
-        content: '';
-        position: absolute;
-        top: 7px;
-        right: 9px;
-        width: 2px;
-        height: 10px;
-        background: #0084ff;
-        transform: rotate(-45deg);
-      }
-
-      &.first-selected-element {
-        pointer-events: none;
-
-        &::before {
-          display: none;
-        }
-
-        &::after {
-          display: none;
-        }
-      }
-
-      &.single-selected-element {
-        &::before {
-          display: none;
-        }
-
-        &::after {
-          display: none;
-        }
-        padding: 0px;
-        padding-left: 4px;
-        background: none;
-      }
-
-      &.single {
-        border: none;
-        font-size: 16px;
-        font-weight: 600;
-        cursor: auto;
-        padding: 7px;
-
-        &::before {
-          display: none;
-        }
-
-        &::after {
-          display: none;
-        }
-      }
     }
-  }
 
-  .options-container {
-    width: 100%;
-    box-shadow: 0 0 1px 1px lightgray;
-    background: white;
-    visibility: hidden;
-    opacity: 0;
-    outline: none;
-    border: none;
-    margin-top: 10px;
-    border-radius: 7px;
-    overflow: hidden;
+    .options-container {
+      position: absolute;
+      visibility: hidden;
+      opacity: 0;
+    }
 
-    .options-container-content {
-      max-height: 500px;
+    .options-container.open {
+      background-color: colorMapper($color, light);
+      padding: 16px;
+      visibility: visible;
+      opacity: 1;
+      position: absolute;
+      z-index: 9999;
       width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      position: relative;
-
-      &-header {
-        background-color: #ffffffe0;
-        height: 112px;
-        z-index: 9999;
-        padding: 0px 16px;
-      }
-
-      .option-list-header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 52px;
-        width: 100%;
-
-        &-title {
-          font-weight: 700;
-          font-size: 18px;
-          line-height: 24px;
-          color: #000;
-          letter-spacing: 0.16px;
-        }
-
-        &-closebtn {
-          position: relative;
-          width: 24px;
-          height: 24px;
-          background: transparent;
-          cursor: pointer;
-
-          &::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 2px;
-            height: 18px;
-            background: black;
-            transform: rotate(45deg) translate(-50%, -50%);
-            transform-origin: left top;
-          }
-
-          &::before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 2px;
-            height: 18px;
-            background: black;
-            transform: rotate(-45deg) translate(-50%, -50%);
-            transform-origin: left top;
-          }
-        }
-      }
-
-      .search-input-wrapper {
-        height: 36px;
-        width: 100%;
-        padding: 0px 4px;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-
-        .search-icon {
-          width: 24px;
-          height: 24px;
-          position: relative;
-
-          &::before {
-            content: '';
-            position: absolute;
-            top: 42%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            border: 2px solid #a5a5a5;
-          }
-
-          &::after {
-            content: '';
-            position: absolute;
-            width: 2px;
-            height: 8px;
-            background-color: #a5a5a5;
-            top: 60%;
-            left: 76%;
-            transform: rotate(-45deg);
-          }
-        }
-
-        .search-input {
-          position: relative;
-          outline: none;
-          border: none;
-          width: auto;
-          display: inline;
-          font-size: 16px;
-
-          &.single-input {
-            font-size: 16px;
-            font-weight: 600;
-
-            &::placeholder {
-              font-size: 16px;
-              font-weight: 400;
-              color: #a5a5a5;
-              letter-spacing: 0.15px;
-            }
-          }
-
-          &.no-search {
-            pointer-events: none;
-            caret-color: transparent;
-          }
-
-          &.no-width {
-            width: 0px;
-          }
-        }
-      }
-
-      .options-list {
-        display: flex;
-        flex-direction: column;
-        gap: 2px;
-        padding:16px;
-        &:not(.multiple){
-          padding:0px 16px;
-        }
-      
-        .select-all-option {
-          padding: 4px 16px;
-          border-radius: 4px;
-          display: flex;
-          &:hover {
-            transition: background-color 0.2s ease-in-out;
-            background-color: lightblue;
-          }
-        }
-        .options {
-          cursor: pointer;
-          padding: 4px 16px;
-          border-radius: 4px;
-          transition: background-color 0.2s ease-in-out;
-          background-color: transparent;
-          display: flex;
-          &:hover {
-            transition: background-color 0.2s ease-in-out;
-            background-color: lightblue;
-          }
-        }
-        overflow-y: auto;
-        &::-webkit-scrollbar {
-          width: 2px;
-          border-radius: 7px;
-          background: lightgray;
-        }
-
-        &::-webkit-scrollbar-thumb {
-          background: gray;
-          border-radius: 7px;
-        }
-
-        &.no-searchable {
-          padding: 20px 8px;
-          .options {
-            padding: 4px 8px;
-          }
-        }
-      }
     }
-  }
-
-  .options-container.open {
-    transition: all 0.3s ease-in-out;
-    visibility: visible;
-    opacity: 1;
-  }
-
-  .options-container.single-select.open {
-    transition: all 0.3s ease-in-out;
-    visibility: visible;
-    opacity: 1;
   }
 }
