--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -7,32 +7,32 @@ html {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
-body{
+body {
   width: 100vw;
   max-width: 100%;
   height: 100vh;
   max-height: 100%;
 }
 
-#root{
+#root {
   height: 100%;
   width: 100%;
 }
 
-ul,
-li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
+// ul,
+// li {
+//   list-style: none;
+//   margin: 0;
+//   padding: 0;
+// }
 
 a {
   display: block;
   text-decoration: none;
-  color:black;
+  color: black;
 
   &:hover {
     text-decoration: none;
