--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -21,19 +21,19 @@ $muiTheme: (
     main: #d87011,
     light: #ffe2c7,
     dark: #a65000,
-    contrastText: rgba(0, 0, 0, 0.87),
+    contrastText: #fff,
   ),
   info: (
     main: #0084ff,
     light: #ebf5ff,
     dark: #005fb8,
-    contrastText: rgba(0, 0, 0, 0.87),
+    contrastText: #fff,
   ),
   success: (
     main: #339f76,
     light: #e5f5ef,
     dark: #005938,
-    contrastText: rgba(0, 0, 0, 0.87),
+    contrastText: #fff,
   ),
   common: (
     "black": #000,
