--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -1,9 +1,8 @@
 .table {
   border-collapse: collapse;
-  display: block;
+  // display: block;
   overflow-x: auto;
   white-space: nowrap;
-  width: 700px;
   min-width: 100%;
   table-layout: fixed;
 
