--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -41,9 +41,11 @@
       position: relative;
     }
 
-    input[type="checkbox"] {
-      -webkit-border-radius: 2px;
-      border-radius: 2px;
+    &.borderRadius {
+      input[type="checkbox"] {
+        -webkit-border-radius: 4px;
+        border-radius: 4px;
+      }
     }
 
     input[type="checkbox"]:not(:disabled):hover {
@@ -70,12 +72,13 @@
       left: -1px;
       width: 100%;
       height: 100%;
-      background: url("@/assets/icons/checkmark.svg") colorMapper($color, main);
+      background: url("../../assets/icons/checkmark.svg")
+        colorMapper($color, main);
       background-repeat: no-repeat;
       background-size: 1em;
       background-position: center;
       border: 1px solid colorMapper($color, main);
-      border-radius: 3px;
+      border-radius: 4px;
     }
 
     &.indeterminate {
@@ -86,13 +89,13 @@
         left: -1px;
         width: 100%;
         height: 100%;
-        background: url("@/assets/icons/hyphen_icon.svg")
+        background: url("../../assets/icons/hyphen_icon.svg")
           colorMapper($color, main);
         background-repeat: no-repeat;
         background-size: 1.2em;
         background-position: center;
         border: 1px solid colorMapper($color, main);
-        border-radius: 3px;
+        border-radius: 4px;
       }
     }
 
