--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,7 +1,22 @@
-@mixin flex($justify: flex-start, $align: flex-start, $dir: row, $gap: 0px) {
+@mixin center() {
   display: flex;
-  flex-direction: $dir;
-  justify-content: $justify;
-  align-items: $align;
-  gap: $gap;
+  align-items: center;
+  justify-content: center;
+}
+
+@mixin selfCenter($position:"absolute") {
+  position: $position;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@mixin verticalCenter() {
+  display: flex;
+  align-items: center;
+}
+
+@mixin horizontalCenter() {
+  display: flex;
+  align-items: center;
 }
