--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,19 +1,14 @@
-html {
-  box-sizing: border-box;
-}
-
 * {
   -webkit-tap-highlight-color: transparent;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
 }
 
 body {
   width: 100vw;
   max-width: 100%;
-  height: 100vh;
+  height:100dvh;
   max-height: 100%;
 }
 
@@ -21,13 +16,6 @@ body {
   height: 100%;
   width: 100%;
 }
-
-// ul,
-// li {
-//   list-style: none;
-//   margin: 0;
-//   padding: 0;
-// }
 
 a {
   display: block;
