--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -21,16 +21,19 @@
   &.sm {
     padding: 4px 10px;
     font-size: 13px;
+    font-weight: 500;
   }
 
   &.md {
     padding: 6px 16px;
     font-size: 14px;
+    font-weight: 700;
   }
 
   &.lg {
     padding: 8px 22px;
     font-size: 15px;
+    font-weight: 900;
   }
 
   &.icon-button.sm {
