--- a/src/components/Typography/Typography.scss
+++ b/src/components/Typography/Typography.scss
@@ -1,15 +1,15 @@
 .heading-one {
   font-size: 1.5rem;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 36px;
-  &--large {
+  &--lg {
     font-size: 1.625rem;
   }
-  &--medium {
+  &--md {
     font-size: 1.5rem;
   }
-  &--small {
+  &--sm {
     font-size: 1.375rem;
   }
 }
@@ -19,13 +19,13 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  &--large {
+  &--lg {
     font-size: 1.375rem;
   }
-  &--medium {
+  &--md {
     font-size: 1.25rem;
   }
-  &--small {
+  &--sm {
     font-size: 1.125rem;
   }
 }
@@ -35,13 +35,13 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  &--large {
+  &--lg {
     font-size: 1.25rem;
   }
-  &--medium {
+  &--md {
     font-size: 1.125rem;
   }
-  &--small {
+  &--sm {
     font-size: 1rem;
   }
 }
@@ -49,15 +49,15 @@
 .heading-four {
   font-size: 1rem;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 22px;
-  &--large {
+  &--lg {
     font-size: 1.125rem;
   }
-  &--medium {
+  &--md {
     font-size: 1rem;
   }
-  &--small {
+  &--sm {
     font-size: 0.875rem;
   }
 }
@@ -65,15 +65,15 @@
 .heading-five {
   font-size: 1rem;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 125.2%;
-  &--large {
+  &--lg {
     font-size: 1.125rem;
   }
-  &--medium {
+  &--md {
     font-size: 1rem;
   }
-  &--small {
+  &--sm {
     font-size: 0.875rem;
   }
 }
@@ -83,13 +83,13 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  &--large {
+  &--lg {
     font-size: 1rem;
   }
-  &--medium {
+  &--md {
     font-size: 0.875rem;
   }
-  &--small {
+  &--sm {
     font-size: 0.75rem;
   }
 }
@@ -97,17 +97,17 @@
 .body-text {
   font-size: 0.875rem;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 20px;
-  &--large {
+  &--lg {
     font-size: 1rem;
     line-height: 22px;
   }
-  &--medium {
+  &--md {
     font-size: 0.875rem;
     line-height: 20px;
   }
-  &--small {
+  &--sm {
     font-size: 0.75rem;
     line-height: 18px;
   }
