changes in typograpy component

--- a/src/components/Typography/Typography.scss
+++ b/src/components/Typography/Typography.scss
@@ -122,4 +122,14 @@
     cursor: pointer;
     align-self: flex-start;
   }
+
+  &.center {
+    text-align: center;
+  }
+  &.right {
+    text-align: right;
+  }
+  &.left {
+    text-align: right;
+  }
 }
