--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -72,7 +72,7 @@
       left: -1px;
       width: 100%;
       height: 100%;
-      background: url("../../assets/icons/checkmark.svg")
+      background: url("@/assets/icons/checkmark.svg")
         colorMapper($color, main);
       background-repeat: no-repeat;
       background-size: 1em;
@@ -89,7 +89,7 @@
         left: -1px;
         width: 100%;
         height: 100%;
-        background: url("../../assets/icons/hyphen_icon.svg")
+        background: url("@/assets/icons/hyphen_icon.svg")
           colorMapper($color, main);
         background-repeat: no-repeat;
         background-size: 1.2em;
