--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -10,7 +10,8 @@ body {
   max-width: 100%;
   height:100vh;
   max-height: 100%;
-  font-family: 'Roboto', sans-serif;;
+  font-family: 'Roboto', sans-serif;
+  background-color: lightgray;
 }
 
 #root {
