plan card added

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -108,24 +108,24 @@
     }
 
     &.sm > input {
-      font-size: 13px;
+      font-size: 0.8125rem;
     }
     &.sm > label {
-      font-size: 13px;
+      font-size: 0.8125rem;
     }
 
     &.md > input {
-      font-size: 14px;
+      font-size: 0.875rem;
     }
     &.md > label {
-      font-size: 14px;
+      font-size: 0.875rem;
     }
 
     &.lg > input {
-      font-size: 15px;
+      font-size: 0.9375rem;
     }
     &.lg > label {
-      font-size: 15px;
+      font-size: 0.9375rem;
     }
   }
 }
