--- a/src/components/Chip/Chip.scss
+++ b/src/components/Chip/Chip.scss
@@ -8,17 +8,17 @@
 
   &.sm {
     padding: 3.25px 7px;
-    font-size: 13px;
+    font-size: 0.8125rem;
   }
 
   &.md {
     padding: 3.15px 10px;
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 
   &.lg {
     padding: 3.76px 14px;
-    font-size: 15px;
+    font-size: 0.9375rem;
   }
 
   &.end {
