--- a/src/components/RichTextEditor/RichTextEditor.scss
+++ b/src/components/RichTextEditor/RichTextEditor.scss
@@ -61,7 +61,7 @@ body {
     padding: 0 10px;
   }
   .toolbar .head .color span {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
   .toolbar .head .color input {
     border: none;
