--- a/src/container/layout/Layout/Layout.scss
+++ b/src/container/layout/Layout/Layout.scss
@@ -5,7 +5,7 @@
     .layout-right-section{
         width: 100%;
         &-menu{
-            padding: 24px;
+            // padding: 24px;
         }
     }
 }
