--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -37,8 +37,10 @@ $muiTheme: (
   ),
   common: (
     main: #000,
+    light: lightgray,
     "black": #000,
     "white": #fff,
+    contrastText: #fff,
   ),
   grayclr: (
     50: #fafafa,
