--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -19,19 +19,19 @@
 
   &.sm {
     padding: 4px 10px;
-    font-size: 13px;
+    font-size: 0.8125rem;
     font-weight: 500;
   }
 
   &.md {
     padding: 6px 16px;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 700;
   }
 
   &.lg {
     padding: 8px 22px;
-    font-size: 15px;
+    font-size: 0.9375rem;
     font-weight: 900;
   }
 
@@ -141,7 +141,7 @@
   .btn.lg,
   .btn.md {
     padding: 4px 10px;
-    font-size: 13px;
+    font-size: 0.8125rem;
 
     img,
     svg {
