--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -1,9 +1,22 @@
 .tabs {
   width: 100%;
+  min-width: 270px;
+  display: flex;
+  flex-direction: column;
   .tabButtons {
     display: inline-flex;
-    justify-content: flex-start;
-    border-bottom: 1px solid lightgray;
+    &:has(:not(.outlined)) {
+      border-bottom: 1px solid lightgray;
+    }
+  }
+  &.center {
+    align-items: center;
+  }
+  &.left {
+    align-items: flex-start;
+  }
+  &.right {
+    align-items: flex-end;
   }
   .btn {
     position: relative;
@@ -19,15 +32,28 @@
   }
 
   @each $color in $colorType {
-    &.#{$color} .btn.active::after {
+    &.#{$color} .btn:not(.outlined).active::after {
       height: 2px;
+      background-color: colorMapper($color, main);
+    }
+
+    &.#{$color} .btn.outlined {
+      border: none;
+      &:hover {
+        border: none;
+      }
+    }
+
+    &.#{$color} .btn.outlined.active {
+      color: white;
+      border: none;
       background-color: colorMapper($color, main);
     }
   }
 
   .tabContent {
+    width: 100%;
     margin-top: 20px;
-    padding: 20px;
     transition: height 0.3s ease;
   }
 }
