--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,8 +1,9 @@
 * {
-  -webkit-tap-highlight-color: transparent;
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  // font-family: 'Roboto', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 body {
@@ -10,11 +11,10 @@ body {
   max-width: 100%;
   height:100vh;
   max-height: 100%;
-  font-family: 'Roboto', sans-serif;
   background-color: lightgray;
 }
 
-#root {
+#root{
   height: 100%;
   width: 100%;
 }
@@ -38,4 +38,36 @@ h6,
 p {
   margin: 0px;
   padding: 0px;
+}
+
+
+@media screen and (max-width: 1900px) {
+  *{
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 1300px) {
+  *{
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 1150px) {
+  *{
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 1150px) {
+  *{
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 650px) {
+  *{
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 550px) {
+  *{
+    font-size: 12px;
+  }
 }
