payments history listing screen added

--- a/src/components/Chip/Chip.scss
+++ b/src/components/Chip/Chip.scss
@@ -76,7 +76,7 @@
       width: 100%;
       height: 100%;
       opacity: 0.12;
-      z-index: -1;
+      // z-index: -1;
     }
 
     &.#{$color}.outlined svg path {
