--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -9,30 +9,34 @@
   gap: 6px;
   letter-spacing: 0.02857em;
   line-height: 1.7;
+  white-space:nowrap;
 
   img,
   rect,
   svg {
-    height: 1.5em;
-    width: 1.5em;
+    height: 1.3em;
+    width: 1.3em;
   }
 
   &.sm {
     padding: 4px 10px;
     font-size: 0.8125rem;
     font-weight: 500;
+    min-height: 32.09px;
   }
 
   &.md {
     padding: 6px 16px;
     font-size: 0.875rem;
     font-weight: 700;
+    min-height: 37.5px;
   }
 
   &.lg {
     padding: 8px 22px;
     font-size: 0.9375rem;
     font-weight: 900;
+    min-height: 43.5px;
   }
 
   &.icon-button.sm {
@@ -80,6 +84,11 @@
     }
 
     &.outlined.#{$color} svg path {
+      fill: colorMapper($color, main);
+      stroke: colorMapper($color, main);
+    }
+
+    &.text.#{$color} svg path {
       fill: colorMapper($color, main);
       stroke: colorMapper($color, main);
     }
