--- a/src/container/billing/pages/Pricing/Pricing.scss
+++ b/src/container/billing/pages/Pricing/Pricing.scss
@@ -1,35 +1,22 @@
 .plans-cards {
-  padding: 40px 60px;
+  padding: 60px 250px;
 }
 
 .pricing-tabs {
-  padding: 10px 40px;
+  padding: 5px 10px;
   border-radius: 99px;
   border: 1px solid #0084ff;
-}
-
-.tabContent {
-  .plan-card-container {
-    padding: 0px 100px;
-  }
-}
-
-@media screen and (max-width: 1700px) {
-  .tabContent {
-    .plan-card-container {
-      padding: 0px 50px;
-    }
+  gap: 8px;
+  .btn {
+    border-radius: 99px;
+    min-height: auto;
+    padding: 5px 32px;
   }
 }
 
 @media screen and (max-width: 1500px) {
   .plans-cards {
     padding: 20px 40px;
-  }
-  .tabContent {
-    .plan-card-container {
-      padding: 0px 25px;
-    }
   }
 }
 
@@ -42,16 +29,11 @@
       grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     }
   }
-  .tabContent {
-    .plan-card-container {
-      padding: 0px 0px;
-    }
-  }
 }
 
 @media screen and (max-width: 500px) {
   .plans-cards {
-    padding: 0px;
+    padding: 10px 0px;
   }
   .plan-card-flex {
     .grid-container {
