--- a/src/container/layout/components/Topbar/Topbar.scss
+++ b/src/container/layout/components/Topbar/Topbar.scss
@@ -4,8 +4,13 @@
   padding: 0px 24px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid black;
-  position: relative;
+  justify-content: space-between;
+  // border-bottom: 1px solid black;
+  background-color: white;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  z-index: 9999999;
 }
 
 .humbarger-icon {
@@ -15,13 +20,18 @@
   gap: 2px;
   cursor: pointer;
   position: absolute;
-  left: 5px;
+  left: 20px;
   .line {
     transition: width 0.3s ease-in-out;
     width: 100%;
     height: 2px;
     background: colorMapper(grayclr, 600);
   }
+}
+
+.topbar-content{
+  width: 100%;
+  padding: 0px 60px;
 }
 
 .collapsed ~ .layout-right-section .topbar-container .humbarger-icon {
