--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -11,7 +11,10 @@ body {
   max-width: 100%;
   height:100vh;
   max-height: 100%;
-  background-color: lightgray;
+  background-color: rgb(241, 241, 241);
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 #root{
