--- a/src/container/layout/Layout/Layout.scss
+++ b/src/container/layout/Layout/Layout.scss
@@ -4,12 +4,11 @@
   height: 100%;
   .layout-right-section {
     width: 100%;
-    &-menu {
-    }
   }
 
   .layout-right-section-menu {
     margin-top: 80px;
+    padding: 40px 250px;
   }
 
   &:has(.sidebar-container):not(:has(.collapsed)) :not(:has(.minimized)) {
@@ -43,6 +42,42 @@
         width: 100%;
         transition: all 0.3s ease-in-out;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 1700px) {
+  .layout-container {
+    .layout-right-section-menu {
+      margin-top: 80px;
+      padding: 60px 200px;
+    }
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .layout-container {
+    .layout-right-section-menu {
+      margin-top: 80px;
+      padding: 60px 150px;
+    }
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .layout-container {
+    .layout-right-section-menu {
+      margin-top: 80px;
+      padding: 60px 100px;
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .layout-container {
+    .layout-right-section-menu {
+      margin-top: 80px;
+      padding: 50px;
     }
   }
 }
