--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -42,7 +42,7 @@ $muiTheme: (
     "white": #fff,
     contrastText: #fff,
   ),
-  grayclr: (
+  grayClr: (
     50: #fafafa,
     100: #f5f5f5,
     200: #eeeeee,
