--- a/src/main.scss
+++ b/src/main.scss
@@ -3,3 +3,4 @@
 @import "./styles/variables.scss";
 @import "./styles/mixins.scss";
 @import "./styles/common.scss";
+@import "./styles/utils.scss";
