working on adding site

--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -1,3 +1,9 @@
+.pagination-properties{
+  .flex-container{
+    max-width: 200px;
+  }
+}
+
 .pagination-container {
   display: flex;
   list-style-type: none;
