--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,3 +3,10 @@ input.hide-number-increment::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.error-text {
+  color: #bd1f21;
+  margin-left: 0px;
+  font-size: 12px;
+  margin-top: 3px;
+}
