--- a/src/components/ToggleButton/ToggleButton.scss
+++ b/src/components/ToggleButton/ToggleButton.scss
@@ -42,7 +42,7 @@
         width: 50px;
         height: 24px;
         transition: background-color 0.3s linear;
-        background-color: colorMapper($color, light);
+        background-color: colorMapper(grayClr, 300);
         border-radius: 12px;
 
         .slider {
