add new keywords page is added

--- a/src/components/CountryFlag/CountryFlag.scss
+++ b/src/components/CountryFlag/CountryFlag.scss
@@ -1,17 +1,17 @@
 .country-select {
-  &.sm button {
+  &.sm #rfs-btn {
     padding: 4px 10px;
     height: 32.09px;
     font-size: 0.8125rem;
   }
 
-  &.md button {
+  &.md #rfs-btn {
     height: 37.8px;
     padding: 6px 16px;
     font-size: 0.875rem;
   }
 
-  &.lg button {
+  &.lg #rfs-btn {
     height: 43.5px;
     padding: 8px 22px;
     font-size: 0.9375rem;
