--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -15,10 +15,10 @@
           display: inline-block;
           width: 30px;
           height: 14px;
-          position: absolute;
-          top: 50%;
-          right: 14px;
-          transform: translateY(-50%);
+          position: relative;
+          // top: 50%;
+          // right: 14px;
+          // transform: translateY(-50%);
 
           &::before {
             content: '';
